--- a/assets/new-entry.glade
+++ b/assets/new-entry.glade
@@ -2,10 +2,20 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <object class="GtkImage" id="icon_preview">
+    <property name="width_request">64</property>
+    <property name="height_request">64</property>
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-missing-image</property>
+    <property name="icon_size">3</property>
+  </object>
   <object class="GtkFileChooserDialog" id="icon_chooser">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Select an Icon</property>
     <property name="type_hint">dialog</property>
+    <property name="preview_widget">icon_preview</property>
+    <property name="use_preview_label">False</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can_focus">False</property>
