--- a/assets/new-entry.glade
+++ b/assets/new-entry.glade
@@ -2,6 +2,21 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <object class="GtkButton" id="cancel_button">
+    <property name="label" translatable="yes">Cancel</property>
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="receives_default">True</property>
+  </object>
+  <object class="GtkButton" id="create_button">
+    <property name="label" translatable="yes">Create</property>
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="receives_default">True</property>
+    <style>
+      <class name="suggested-action"/>
+    </style>
+  </object>
   <object class="GtkImage" id="icon_preview">
     <property name="width_request">64</property>
     <property name="height_request">64</property>
