List view now actually lists everything and lets you edit/delete

--- a/assets/entry.glade
+++ b/assets/entry.glade
@@ -16,6 +16,10 @@
       <object class="GtkBox" id="icon_box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="margin_left">4</property>
+        <property name="margin_right">4</property>
+        <property name="margin_top">4</property>
+        <property name="margin_bottom">4</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkImage" id="icon_image">
@@ -31,7 +35,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="name-label">
+          <object class="GtkLabel" id="name_value">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">SHORTCUT NAME</property>
@@ -53,6 +57,10 @@
       <object class="GtkGrid" id="attributes_grid">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="margin_left">4</property>
+        <property name="margin_right">4</property>
+        <property name="margin_top">4</property>
+        <property name="margin_bottom">4</property>
         <property name="row_spacing">3</property>
         <property name="column_spacing">8</property>
         <property name="row_homogeneous">True</property>
@@ -114,7 +122,6 @@
             <property name="can_focus">False</property>
             <property name="halign">start</property>
             <property name="valign">center</property>
-            <property name="label" translatable="yes">label</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -127,7 +134,6 @@
             <property name="can_focus">False</property>
             <property name="halign">start</property>
             <property name="valign">center</property>
-            <property name="label" translatable="yes">label</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -171,6 +177,65 @@
         <property name="expand">False</property>
         <property name="fill">True</property>
         <property name="position">1</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkButtonBox">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">8</property>
+        <property name="layout_style">start</property>
+        <child>
+          <object class="GtkButton" id="launch_entry_button">
+            <property name="label" translatable="yes">Launch</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="edit_entry_button">
+            <property name="label">gtk-edit</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="use_stock">True</property>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="delete_entry_button">
+            <property name="label">gtk-delete</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="use_stock">True</property>
+            <style>
+              <class name="destructive-action"/>
+            </style>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+      </object>
+      <packing>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+        <property name="pack_type">end</property>
+        <property name="position">2</property>
       </packing>
     </child>
   </object>
