--- a/assets/new-entry.glade
+++ b/assets/new-entry.glade
@@ -40,7 +40,7 @@
       <pattern>*.svg</pattern>
     </patterns>
   </object>
-  <object class="GtkWindow" id="new_entry_window">
+  <object class="GtkApplicationWindow" id="new_entry_window">
     <property name="width_request">600</property>
     <property name="can_focus">False</property>
     <child>
