--- a/assets/list-entries.glade
+++ b/assets/list-entries.glade
@@ -13,16 +13,37 @@
         <property name="subtitle" translatable="yes">mkdesktop</property>
         <property name="show_close_button">True</property>
         <child>
-          <object class="GtkButton" id="new_entry_button">
-            <property name="label">gtk-new</property>
+          <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="use_stock">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkButton" id="new_entry_button">
+                <property name="label">gtk-new</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="undo_button">
+                <property name="label" translatable="yes">Undo Delete</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="no_show_all">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
         </child>
       </object>
     </child>
